# JobInterviewTechnicalExemple

Rust/Actixweb/first_actix_app/: Cargo.toml  autoreload.sh
Rust/Actixweb/first_actix_app/html/: index.html  test.html
Rust/Actixweb/first_actix_app/src/: main.rs
Rust/Crates/chrono-test/: Cargo.toml
Rust/Crates/chrono-test/src/: main.rs
Rust/Crates/credit-invoice/src/: main.rs
Rust/Crates/display_enum/: Cargo.toml
Rust/Crates/display_enum/src/: main.rs
Rust/Crates/easy4d-parser/: Cargo.toml  demo_catalogue.csv
Rust/Crates/easy4d-parser/src/: main.rs
Rust/Crates/excel-rust/: Cargo.toml  export.xlsx  export_csv_test.xlsx
Rust/Crates/excel-rust/src/: main.rs
Rust/Crates/package-module/: Cargo.toml
Rust/Crates/package-module/src/: main.rs
Rust/Crates/package-module/src/shapes/: rectangle.rs
Rust/Crates/pdf-rust/: Cargo.toml
Rust/Crates/pdf-rust/src/: main.old.rs  main.rs
Rust/Crates/playground_rust/: Cargo.toml  demo_catalogue.csv
Rust/Crates/playground_rust/src/: main.rs
Rust/Crates/provider_catalog/: .env  Cargo.toml  rustfmt.toml
Rust/Crates/provider_catalog/src/: Constants.rs  Database.rs  Extract.rs  Schema.rs  Transfer.rs  main.rs
Rust/Crates/request_builder/: Cargo.toml
Rust/Crates/request_builder/src/: main.rs
Rust/Crates/reqwest_playground/: .env  Cargo.toml
Rust/Crates/reqwest_playground/src/: main-old.rs  main.rs
Rust/Crates/sqlx-test/: Cargo.toml
Rust/Crates/sqlx-test/migration/: user.sql
Rust/Crates/sqlx-test/src/: data.rs  insert.rs  main-old.rs  main-sc.rs  main.rs  playground.rs  select.rs  update.rs  users.rs
Rust/Crates/stripe-playground/: Cargo.toml
Rust/Crates/stripe-playground/src/: main.rs
Rust/Crates/stripe-playground/src/Stripe/: BillingDetails.rs  Charges.rs  Data.rs  Outcome.rs  PaymentIntentNextAction.rs  PaymentIntentStatus.rs  PaymentMethodDetails.rs  PaymentMethodOptions.rs  Refunds.rs  mod.rs
Rust/Crates/test-mail/: Cargo.toml
Rust/Crates/test-mail/scripts/: test_sib_email.sh
Rust/Crates/test-mail/src/: main.old.rs  main.rs
Rust/Crates/vector-playground/: Cargo.toml
Rust/Crates/vector-playground/src/: main.rs
Rust/Crates/zip-rust/: Cargo.toml  exemple.txt  exemple1.txt
Rust/Crates/zip-rust/src/: main.rs
Rust/Playground/c_like_linkedlist/: Cargo.toml
Rust/Playground/c_like_linkedlist/src/: main.rs
