[package]
name = "easy4d-parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1.6"
uuid = { version = "*", features = ["v4"] }
rand = "0.8.4"
