[package]
name = "pdf-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.4.0"
image = "*"
rand = "0.8.4"
chrono = { version = "~0.4.19", features = ["serde"] }
uuid = { version = "~0.8.2", features = ["v4"] }
