[package]
name = "provider_catalog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = "3.0.1"
csv = "1.1.6"
dotenv = "0.15.0"
sqlx = { version = "~0.4.2", default-features = false, features = [ "runtime-actix-rustls", "macros", "mysql", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "~0.8.2", features = ["v4"] }
tokio = { version = "0.2.25", features = ["full"] }
rand = "*"
