[package]
name = "reqwest_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.126", features = ["derive"] }
serde_json = "~1.0.64"
reqwest = { version = "~0.10.10", features = ["json"] }
dotenv = "~0.15.0"
tokio = { version = "0.2.25", features = ["full"] }
