[package]
name = "stripe-playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "~0.10.10", features = ["json"] }
serde = { version = "~1.0.126", features = ["derive"] }
serde_json = "~1.0.64"
serde_qs = "0.8.5"
dotenv = "~0.15.0"
tokio = { version = "0.2.25", features = ["full"] }
