[package]
name = "test-mail"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.0-rc.3", features = ["file-transport", "smtp-transport", "builder"] }
serde = { version = "~1.0.123", features = ["derive"] }
serde_json = "~1.0.64"
hex = "0.4.3"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.7.1", features = ["macros", "rt", "rt-multi-thread"] }
rand = "*"
